--- a/index.html
+++ b/index.html
@@ -6,7 +6,18 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Sample Text</p>
+    <ul id="list">
+        <li class="item"></li>
+        <li class="item">Item 2</li>
+        <li class="item">Item 3</li>
+        <li class="item">Item 4</li>
+        <li class="item">Item 5</li>
+        <a href="#">Welcome</a>
+        <a href="#">About Us</a>
+    </ul>
+    <button id="submit">Submit</button>
+    <h2 class="hello">Hello</h2>
+    <h2>Heading 2</h2>
     <script src="dom.js"></script>
 </body>
 </html>
