--- a/index.html
+++ b/index.html
@@ -7,17 +7,12 @@
 </head>
 <body>
     <ul id="list">
-        <li class="item"></li>
+        Text Node
+        <!-- Comment node-->
+        <li class="item">Item 1</li>
         <li class="item">Item 2</li>
-        <li class="item">Item 3</li>
-        <li class="item">Item 4</li>
-        <li class="item">Item 5</li>
-        <a href="#">Welcome</a>
-        <a href="#">About Us</a>
     </ul>
-    <button id="submit">Submit</button>
-    <h2 class="hello">Hello</h2>
-    <h2>Heading 2</h2>
+    <h2 class="numItems"></h2>
     <script src="dom.js"></script>
 </body>
 </html>
